<resources>
    <string name="appName">المُفَسِّر</string>
    <string name="appName2">آسم التطبيق : المُفَسِّر</string>
    <string name="appName3"> #تطبيق_المُفَسِّر ♥</string>
    <string name="chooseSoura">إختار آسم السورة</string>
    <string name="chooseAya">الآية رقم </string>
    <string name="editAya">تم تعديل الآية رقم</string>
    <string name="noAyat">إختار السورة أولا !</string>
    <string name="writeTafseer">أكتب التفسير هنا</string>
    <string name="writeAya">أكتب الآية هنا</string>
    <string name="noPermission">لا يوجد إذن للوصول للمعرض</string>
    <string name="noPermissionCall">لا يوجد إذن للإتصال </string>
    <string name="noOpenSoura">لا يمكنك فتح سورة </string>
    <string name="noOpenAya">لا يمكنك فتح الآية رقم </string>
    <string name="fail">فشل تحميل الصورة</string>
    <string name="success">تم تحميل الصورة بنجاح</string>
    <string name="fail1">فشل تحميل التفسير !</string>
    <string name="noImage">من فضلك إختار الصورة</string>
    <string name="notComplete">من فضلك أكتب التفسير</string>
    <string name="upload">رفع التفسير</string>
    <string name="uploadTafseer">جاري رفع تفسير سورة </string>
    <string name="finish">لقد إنتهيت</string>
    <string name="about">حول</string>
    <string name="downloadAss3diy">تحميل التفسير المختصر</string>
    <string name="downloadAss3diy2">التفسير المختصر</string>
    <string name="downloadAss3diy3">جاري تحميل التفسير المختصر</string>
    <string name="companyName">شركة : مِتبُوي</string>
    <string name="companyName2">مِتبُوي</string>
    <string name="myName"> آسم المبرمج : يوسف شعبان</string>
    <string name="whatsapp">مجموعة الواتساب</string>
    <string name="from">من شركة</string>
    <string name="block">أنت محظور لإرتكابك بعض الأخطاء</string>
    <string name="downloadAya">تحميل صورة الآية</string>
    <string name="copyAya">نسخ نص الآية</string>
    <string name="downloadTafseer">تحميل صورة التفسير</string>
    <string name="copyTafseer">نسخ نص التفسير</string>
    <string name="successCopy">تم نسخ النص بنجاح</string>
    <string name="successDownload">تم تنزيل الصورة بنجاح</string>
    <string name="failDownload">فشل تنزيل الصورة</string>
    <string name="canRead">يمكنك قراءة تفسير الآية رقم </string>
    <string name="fromSoura">"من سورة "</string>
    <string name="soura">"سورة"</string>
    <string name="tafseerSoura">"تفسير سورة"</string>
    <string name="aya">"آية"</string>
    <string name="editTafseer">تعديل التفسير</string>
    <string name="chat">تواصل معنا</string>
    <string name="lock">الآيات المغلقة</string>
    <string name="more">علامة</string>
    <string name="callMe">إتصل بي</string>
    <string name="numberOfAya">عدد الآيات :</string>
    <string name="settings">الإعدادات</string>
    <string name="search">بحث</string>
    <string name="palestine">لا تنسوا إخوانكم في فلسطين الحبيبة</string>
    <string name="count">العدد : </string>
    <string name="delete">حذف</string>
    <string name="countDelete">هل تريد حذف العداد الخاص بـ</string>
    <string name="Yes">نعم</string>
    <string name="No">gh</string>
    <string name="mode">الوضع</string>
    <string-array name="Fragments">
        <item>المُفَسِّر</item>
        <item>الأذكار</item>
    </string-array>
    <string-array name="Azkar">
        <item>لَا إِلَهَ إِلَّا اللَّهُ</item>
        <item>لَا إلَه إلّا اللهُ وَحْدَهُ لَا شَرِيكَ لَهُ، لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلُّ شَيْءِ قَدِيرِ. </item>
        <item>سُبْحَانَ اللَّهِ</item>
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِ</item>
        <item>سُبْحَانَ اللَّهِ وَالْحَمْدُ لِلَّهِ</item>
        <item>سُبْحَانَ اللهِ العَظِيمِ وَبِحَمْدِهِ</item>
        <item>سُبْحَانَ اللَّهِ وَبِحَمْدِهِ ، سُبْحَانَ اللَّهِ الْعَظِيمِ</item>
        <item>لا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ</item>
        <item>الْحَمْدُ للّهِ رَبِّ الْعَالَمِينَ</item>
        <item>الْلَّهُم صَلِّ وَسَلِم وَبَارِك عَلَى سَيِّدِنَا مُحَمَّد</item>
        <item>أستغفر الله</item>
        <item>سُبْحَانَ الْلَّهِ، وَالْحَمْدُ لِلَّهِ، وَلَا إِلَهَ إِلَّا الْلَّهُ، وَالْلَّهُ أَكْبَرُ </item>
        <item>الْلَّهُ أَكْبَرُ</item>
        <item>سُبْحَانَ اللَّهِ ، وَالْحَمْدُ لِلَّهِ ، وَلا إِلَهَ إِلا اللَّهُ ، وَاللَّهُ أَكْبَرُ ، اللَّهُمَّ اغْفِرْ لِي ، اللَّهُمَّ ارْحَمْنِي ، اللَّهُمَّ ارْزُقْنِي.</item>
        <item>الْحَمْدُ لِلَّهِ حَمْدًا كَثِيرًا طَيِّبًا مُبَارَكًا فِيهِ.</item>
        <item>اللَّهُ أَكْبَرُ كَبِيرًا ، وَالْحَمْدُ لِلَّهِ كَثِيرًا ، وَسُبْحَانَ اللَّهِ بُكْرَةً وَأَصِيلاً.</item>
        <item>اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا صَلَّيْتَ عَلَى إِبْرَاهِيمَ , وَعَلَى آلِ إِبْرَاهِيمَ إِنَّكَ حَمِيدٌ مَجِيدٌ , اللَّهُمَّ بَارِكْ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى إِبْرَاهِيمَ وَعَلَى آلِ إِبْرَاهِيمَ إِنَّكَ حَمِيدٌ مَجِيدٌ. </item>
        <item>أسْتَغْفِرُ اللهَ وَأتُوبُ إلَيْهِ</item>
        <item>لَّا إِلَهَ إِلَّا أَنتَ سُبْحَانَكَ إِنِّي كُنتُ مِنَ الظَّالِمِينَ</item>
        <item>الْحَمْدُ لِلَّهِ</item>
    </string-array>
    <string-array name="Quran">
        <item>الفاتحة</item>
        <item>البقرة</item>
        <item>آل عمران</item>
        <item>النساء</item>
        <item>المائدة</item>
        <item>الأنعام</item>
        <item>الأعراف</item>
        <item>الأنفال</item>
        <item>التوبة</item>
        <item>يونس</item>
        <item>هود</item>
        <item>يوسف</item>
        <item>الرعد</item>
        <item>إبراهيم</item>
        <item>الحجر</item>
        <item>النحل</item>
        <item>الإسراء</item>
        <item>الكهف</item>
        <item>مريم</item>
        <item>طه</item>
        <item>الأنبياء</item>
        <item>الحج</item>
        <item>المؤمنون</item>
        <item>النور</item>
        <item>الفرقان</item>
        <item>الشعراء</item>
        <item>النمل</item>
        <item>القصص</item>
        <item>العنكبوت</item>
        <item>الروم</item>
        <item>لقمان</item>
        <item>السجدة</item>
        <item>الأحزاب</item>
        <item>سبإ</item>
        <item>فاطر</item>
        <item>يس</item>
        <item>الصافات</item>
        <item>ص</item>
        <item>الزمر</item>
        <item>غافر</item>
        <item>فصِّلت</item>
        <item>الشورى</item>
        <item>الزخرف</item>
        <item>الدخان</item>
        <item>الجاثية</item>
        <item>الأحقاف</item>
        <item>محمد</item>
        <item>الفتح</item>
        <item>الحجرات</item>
        <item>ق</item>
        <item>الذاريات</item>
        <item>الطور</item>
        <item>النجم</item>
        <item>القمر</item>
        <item>الرحمن</item>
        <item>الواقعة</item>
        <item>الحديد</item>
        <item>المجادلة</item>
        <item>الحشر</item>
        <item>الممتحنة</item>
        <item>الصف</item>
        <item>الجمعة</item>
        <item>المنافقون</item>
        <item>التغابن</item>
        <item>الطلاق</item>
        <item>التحريم</item>
        <item>الملك</item>
        <item>القلم</item>
        <item>الحاقة</item>
        <item>المعارج</item>
        <item>نوح</item>
        <item>الجن</item>
        <item>المزمل</item>
        <item>المدثر</item>
        <item>القيامة</item>
        <item>الإنسان</item>
        <item>المرسلات</item>
        <item>النبإ</item>
        <item>النازعات</item>
        <item>عبس</item>
        <item>التكوير</item>
        <item>الانفطار</item>
        <item>المطففين</item>
        <item>الانشقاق</item>
        <item>البروج</item>
        <item>الطارق</item>
        <item>الأعلى</item>
        <item>الغاشية</item>
        <item>الفجر</item>
        <item>البلد</item>
        <item>الشمس</item>
        <item>الليل</item>
        <item>الضحى</item>
        <item>الشرح</item>
        <item>التين</item>
        <item>العلق</item>
        <item>القدر</item>
        <item>البينة</item>
        <item>الزلزلة</item>
        <item>العاديات</item>
        <item>القارعة</item>
        <item>التكاثر</item>
        <item>العصر</item>
        <item>الهمزة</item>
        <item>الفيل</item>
        <item>قريش</item>
        <item>الماعون</item>
        <item>الكوثر</item>
        <item>الكافرون</item>
        <item>النصر</item>
        <item>المسد</item>
        <item>الإخلاص</item>
        <item>الفلق</item>
        <item>الناس</item>
    </string-array>
    <string-array name="Numbers">
        <item>7</item>
        <item>286</item>
        <item>200</item>
        <item>176</item>
        <item>120</item>
        <item>165</item>
        <item>206</item>
        <item>75</item>
        <item>129</item>
        <item>109</item>
        <item>123</item>
        <item>111</item>
        <item>43</item>
        <item>52</item>
        <item>99</item>
        <item>128</item>
        <item>111</item>
        <item>110</item>
        <item>98</item>
        <item>135</item>
        <item>112</item>
        <item>78</item>
        <item>118</item>
        <item>64</item>
        <item>77</item>
        <item>227</item>
        <item>93</item>
        <item>88</item>
        <item>69</item>
        <item>60</item>
        <item>34</item>
        <item>30</item>
        <item>73</item>
        <item>54</item>
        <item>45</item>
        <item>83</item>
        <item>182</item>
        <item>88</item>
        <item>75</item>
        <item>85</item>
        <item>54</item>
        <item>53</item>
        <item>89</item>
        <item>59</item>
        <item>37</item>
        <item>35</item>
        <item>38</item>
        <item>29</item>
        <item>18</item>
        <item>45</item>
        <item>60</item>
        <item>49</item>
        <item>62</item>
        <item>55</item>
        <item>78</item>
        <item>96</item>
        <item>29</item>
        <item>22</item>
        <item>24</item>
        <item>13</item>
        <item>14</item>
        <item>11</item>
        <item>11</item>
        <item>18</item>
        <item>12</item>
        <item>12</item>
        <item>30</item>
        <item>52</item>
        <item>52</item>
        <item>44</item>
        <item>28</item>
        <item>28</item>
        <item>20</item>
        <item>56</item>
        <item>40</item>
        <item>31</item>
        <item>50</item>
        <item>40</item>
        <item>46</item>
        <item>42</item>
        <item>29</item>
        <item>19</item>
        <item>36</item>
        <item>25</item>
        <item>22</item>
        <item>17</item>
        <item>19</item>
        <item>26</item>
        <item>30</item>
        <item>20</item>
        <item>15</item>
        <item>21</item>
        <item>11</item>
        <item>8</item>
        <item>8</item>
        <item>19</item>
        <item>5</item>
        <item>8</item>
        <item>8</item>
        <item>11</item>
        <item>11</item>
        <item>8</item>
        <item>3</item>
        <item>9</item>
        <item>5</item>
        <item>4</item>
        <item>7</item>
        <item>3</item>
        <item>6</item>
        <item>3</item>
        <item>5</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>