<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:icon="@drawable/more2"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/copyAya"
                android:title="@string/copyAya"
                android:icon="@drawable/copy" />

            <item
                android:id="@+id/downloadAya"
                android:title="@string/downloadAya"
                android:icon="@drawable/download" />

            <item
                android:id="@+id/copyTafseer"
                android:title="@string/copyTafseer"
                android:icon="@drawable/copy" />

            <item
                android:id="@+id/downloadTafseer"
                android:title="@string/downloadTafseer"
                android:icon="@drawable/download" />
        </menu>
    </item>

</menu>