<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item android:icon="@drawable/more2"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/whatsapp"
                android:title="@string/whatsapp"
                android:icon="@drawable/whatsapp" />
            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/about" />
        </menu>
    </item>
</menu>