<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/containerBottom"
    android:background="@drawable/dialog_background"
    android:layoutDirection="rtl"
    android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:src="@drawable/more"
         android:contentDescription="@string/more"
         android:background="@drawable/dialog_background" />
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
         android:background="@color/green"/>

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardElevation="@dimen/_10sdp"
         android:layout_margin="@dimen/_20sdp"
         app:cardBackgroundColor="@color/whiteChange">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="50dp"
                   android:gravity="center"
                   android:text="@string/appName2"
                   android:textSize="@dimen/_20ssp"
                   android:textStyle="bold"
                   android:textColor="@color/green"
                   android:fontFamily="@font/arabic"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="50dp"
                   android:gravity="center"
                   android:text="@string/myName"
                   android:textSize="@dimen/_20ssp"
                   android:textStyle="bold"
                   android:textColor="@color/green"
                   android:fontFamily="@font/arabic"/>
          </LinearLayout>
     </androidx.cardview.widget.CardView>

     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardElevation="@dimen/_10sdp"
         android:layout_margin="@dimen/_20sdp"
         app:cardBackgroundColor="@color/whiteChange">
          <ImageButton
              android:id="@+id/callMe"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/phone"
              android:contentDescription="@string/callMe"
              android:background="@color/green" />
     </androidx.cardview.widget.CardView>
</LinearLayout>